[package]
name = "core"
version = "0.1.0"
authors = ["hzqd <hzqelf@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my_ext = { path = "../my_ext" }
utils = { path = "../utils" }
chrono = "0.4.19"
serde = { version = "1.0.117", features = ["derive"] }