[package]
name = "utils"
version = "0.1.0"
authors = ["hzqd <hzqelf@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my_ext = { path = "../my_ext" }
serde = { version = "1.0.117", features = ["derive"] }
bincode = "1.3.1"
rust-crypto = "0.2.36"